<resources>
    <string name="app_name">LC-Forever</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_sound">RecordSoundActivity</string>
    <string name="title_activity_maps_user">MapsUserActivity</string>
    <string name="title_activity_start">StartActivity</string>

    <!--            StartActivity                    -->
    <string name="startMapsActivity">Admin</string>
    <string name="startMapsUserActivity">User</string>
    <string name="dropDb">Drop Database</string>
    <string name="startActivityhead">LC-Forever</string>

    <!--            MapsActivity                    -->
    <string name="startDrawRoute">Draw a route</string>
    <string name="endDrawRoute">Stop drawing</string>
    <string name="save">Save route</string>

    <!--         RecordSoundActivity                -->
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>
    <string name="save_recording">Save record</string>

</resources>