<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/recordsoundactivity"
        tools:context=".RecordSoundActivity">


    <!--Heading Text View-->
    <TextView
        android:id="@+id/txthead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/audio_recorder"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

        <!--Displays status of recording-->
        <TextView
            android:id="@+id/idTVstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/status"
            android:textAlignment="center"
            android:textSize="18sp" />

        <!--Linear Layout for adding textviews
            in horizontal manner-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <!--Textview to start audio recording-->
            <TextView
                android:id="@+id/btnRecord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:padding="5dp"
                android:text="@string/start_recording"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/ic_start_recording" />

            <!--Textview to stop audio recording-->
            <TextView
                android:id="@+id/btnStop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:padding="5dp"
                android:text="@string/stop_recording"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/ic_stop_recording" />

            <!--Textview to play audio that is recorded-->
            <TextView
                android:id="@+id/btnPlay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:padding="5dp"
                android:text="@string/play_recording"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/ic_play_audio" />

            <!--Textview to pause the play of audio recording-->
            <TextView
                android:id="@+id/btnStopPlay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:lines="2"
                android:padding="5dp"
                android:text="@string/stop_playing"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/ic_pause_audio" />


        </LinearLayout>
    <!--Button for save-->
    <Button
        android:id="@+id/buttonSaveRecording"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="40dp"
        android:background="@color/purple_700"
        android:textAlignment="center"
        android:padding="10dp"
        android:text="@string/save_recording"
        android:textColor="@color/white" />
</RelativeLayout>