<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/rel">

    <!--Map fragment-->
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        tools:layout="@layout/support_simple_spinner_dropdown_item"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph">
    </fragment>

    <!--View for handling touch gestures-->
    <View
        android:id="@+id/drawer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--Button for start draw-->
    <Button
        android:id="@+id/buttonStartDraw"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="40dp"
        android:background="@color/purple_700"
        android:padding="10dp"
        android:text="@string/startDrawRoute"
        android:textColor="@color/white"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <!--Button for end draw-->
    <Button
        android:id="@+id/buttonEndDraw"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="40dp"
        android:background="@color/purple_700"
        android:padding="10dp"
        android:text="@string/endDrawRoute"
        android:textColor="@color/white" />

    <!--Button for save-->
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="103dp"
        android:background="@color/purple_700"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/white" />

    <!--ImageButtons to play and pause audio recording-->
    <ImageButton
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/purple_700"
        android:contentDescription="@string/play_recording"
        android:src="@drawable/ic_play_audio"
        android:text="@string/play_recording"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <ImageButton
        android:id="@+id/btnStopPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/purple_700"
        android:contentDescription="@string/stop_playing"
        android:src="@drawable/ic_pause_audio"
        android:text="@string/stop_playing" />

</RelativeLayout>
