<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/startActivityhead"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/buttonDropDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="495dp"
        android:background="@color/purple_700"
        android:padding="10dp"
        android:text="@string/dropDb"
        android:textAlignment="center"
        android:textColor="@color/white"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/buttonGoToMapsActivity"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="63dp"
        android:background="@color/purple_700"
        android:padding="10dp"
        android:text="@string/startMapsActivity"
        android:textAlignment="center"
        android:textColor="@color/white"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/buttonGoToMapsUserActivity"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="63dp"
        android:background="@color/purple_700"
        android:padding="10dp"
        android:text="@string/startMapsUserActivity"
        android:textAlignment="center"
        android:textColor="@color/white"
        tools:ignore="DuplicateClickableBoundsCheck" />

</RelativeLayout>